# cloudmusic

./: BottomBar.qml  CMakeLists.txt  FindMusicNewMusicContent.qml  FindMusicPlayListContent.qml  ImageResource.qrc  LeftBar.qml  MusicResource.qml  MusicResourse.qml  PageFindMusic.qml  PageMusicLyricDetail.qml  PageMusicPlayListDetail.qml  QCBottomBar.qml  QCLeftBar.qml  QCLyricListView.qml  QCMusicPlayer.qml  QCPlayListLable.qml  QCRightContent.qml  QCTitleBar.qml  QCToolTipButton.qml  QCVolumeBtn.qml  QImage.qml  RightContent.qml  RoundImage.qml  TitleBar.qml  ToolTipButton.qml  favoritemanager.cpp  favoritemanager.h  framelesswindow.cpp  framelesswindow.h  image.qrc  main.cpp  main.qml  qmlpage.qmodel
qcQmlComponent/: QCImage.qml  QCLyricListView.qml  QCPlayListLable.qml  QCThisPlayerListLabel.qml  QCToolTipButton.qml  QCVolumeBtn.qml
qmlPage/: PageFindMusic.qml  PageMusicLyricDetail.qml  PageMusicPlayListDetail.qml
qmlPage/pageFindMusicContent/: FindMusicNewMusicContent.qml  FindMusicPlayListContent.qml
video_and_markdown/: Api_User_Manual.txt  musicplayerMarkdown.docx
